--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.1",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "doctrine/dbal": "^2.10",
+        "eminiarts/nova-tabs": "^1.2",
         "fideloper/proxy": "^4.0",
         "jenssegers/date": "^3.5",
         "laravel-frontend-presets/material-dashboard": "^1.0",
