--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
         "axios": "^0.18",
         "bootstrap": "^4.5.0",
         "cross-env": "^5.1",
+        "deepmerge": "^4.2.2",
+        "fibers": "^5.0.0",
         "jquery": "^3.5.1",
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.26.10",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.3.1",
         "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "vuetify": "^2.3.6"
     }
 }
