--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "socialiteproviders/microsoft-azure": "^3.0"
+        "socialiteproviders/microsoft-azure": "^3.0",
+        "spatie/laravel-searchable": "^1.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
