--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^6.1",
         "maatwebsite/excel": "^3.1",
         "socialiteproviders/microsoft-azure": "^3.0",
         "spatie/laravel-searchable": "^1.6"
