--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.1",
+        "php": "^7.3.1",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
@@ -16,6 +16,7 @@
         "laravel-frontend-presets/material-dashboard": "^1.0",
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.3",
+        "laravel/telescope": "^3.5",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.1",
         "maatwebsite/excel": "^3.1",
