--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel-frontend-presets/material-dashboard": "^1.0",
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.3",
+        "laravel/telescope": "^3.5",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.1",
         "maatwebsite/excel": "^3.1",
