--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.1",
+        "php": "^7.2.1",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "illuminate/support": "^7.25",
         "jenssegers/date": "^3.5",
         "laravel-frontend-presets/material-dashboard": "^1.0",
         "laravel/framework": "^6.2",
