--- a/composer.json
+++ b/composer.json
@@ -8,29 +8,25 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.1",
-        "barryvdh/laravel-dompdf": "^0.8.5",
-        "doctrine/dbal": "^2.10",
-        "fideloper/proxy": "^4.0",
-        "illuminate/support": "^7.25",
-        "jenssegers/date": "^3.5",
-        "laravel-frontend-presets/material-dashboard": "^1.0",
-        "laravel/framework": "^6.2",
+        "php": "^7.2.5",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.24",
         "laravel/socialite": "^4.3",
         "laravel/telescope": "^3.5",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.1",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "maatwebsite/excel": "^3.1",
         "socialiteproviders/microsoft-azure": "^3.0",
         "spatie/laravel-searchable": "^1.6"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
