--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/material-dashboard.css": "/css/material-dashboard.css"
+    "/js/app.js": "/js/app.js?id=e7d4280515ee63766a8d",
+    "/css/material-dashboard.css": "/css/material-dashboard.css?id=162d19196cda269f4ad1"
 }
